SOC-3205 | fix: remove not needed media query and change z-index to higher to show error message above reply editor

--- a/front/main/app/styles/component/discussion/_discussion-alert-notification.scss
+++ b/front/main/app/styles/component/discussion/_discussion-alert-notification.scss
@@ -1,6 +1,6 @@
 .discussions {
 	.alert-notifications {
-		z-index: $z-1;
+		z-index: $z-8;
 
 		.discussions-action-failed {
 			background-color: $discussion-alert-notification-background-color;
@@ -9,17 +9,10 @@
 			font-size: $type-smallest;
 			font-weight: $font-weight-bold;
 			margin: 0 auto;
+			max-width: 1176px;
 			padding-bottom: 9px;
 			padding-top: 9px;
 			text-align: center;
-		}
-	}
-}
-
-@media #{$desktop-range} {
-	.discussions-action-failed {
-		&.alert-notification {
-			max-width: 1176px;
 		}
 	}
 }
